feat: finish home page

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -2,16 +2,36 @@
 <div class="py-24 sm:py-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <div class="mx-auto max-w-2xl lg:mx-0">
-      <h2
-        class="mt-2 text-4xl font-bold tracking-tight sm:text-6xl"
-      >
-        Hey! I'm Drew
+      <h2 class="mt-2 text-4xl font-bold tracking-tight sm:text-6xl">
+        {{.Greeting}}!
       </h2>
       <p class="mt-6 text-lg leading-8">
-        Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem
-        cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua.
+        I'm Drew. I'm a 25-year-old software developer residing somewhere in the
+        Washington DC metropolitan area.</p>
+    </div>
+  </div>
+
+  <div class="text-right flex justify-end mx-auto max-w-7xl px-6 lg:px-8">
+    <div class="mx-auto max-w-2xl lg:mx-0">
+      <h2 class="mt-2 text-4xl font-bold tracking-tight sm:text-6xl">
+        My Favorite Skills
+      </h2>
+      <p class="mt-6 text-lg leading-8">
+        Go, Typescript, Python, React, Git, Docker, SQL
+      </p>
+    </div>
+  </div>
+
+  <div class="mx-auto max-w-7xl px-6 lg:px-8">
+    <div class="mx-auto max-w-2xl lg:mx-0">
+      <h2 class="mt-2 text-4xl font-bold tracking-tight sm:text-6xl">
+        About Me
+      </h2>
+      <p class="mt-6 text-lg leading-8">
+        I love writing code, using Linux, and learning new things. If you want to know more, feel free to reach out!
       </p>
     </div>
   </div>
 </div>
+
 {{end}}
