feat: add link to my resume

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,14 +25,13 @@
       <!-- header -->
       <div
         class="px-6 lg:px-8 flex flex-row pt-4 justify-between text-neutral-600"
-        hx-boost="true"
       >
         <a href="/" class="hover:underline">home</a>
         <div class="flex justify-evenly space-x-4">
           <a href="mailto:andrew.boram@hotmail.com" class="hover:underline"
             >contact</a
           >
-          <a href="/" class="hover:underline">resume</a>
+          <a href="/public/resume.pdf" class="hover:underline">resume</a>
         </div>
       </div>
       <!-- content -->
