fix: correct alignment issues

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,7 +1,7 @@
 {{define "title"}}Drew Boram{{end}} {{define "content"}}
 <div class="py-24 sm:py-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
-    <div class="mx-auto max-w-2xl lg:mx-0">
+    <div class="max-w-2xl lg:mx-0">
       <h2 class="mt-2 text-4xl font-bold tracking-tight sm:text-6xl">
         {{.Greeting}}!
       </h2>
@@ -12,7 +12,7 @@
   </div>
 
   <div class="text-right flex justify-end mx-auto max-w-7xl px-6 lg:px-8">
-    <div class="mx-auto max-w-2xl lg:mx-0">
+    <div class="max-w-2xl lg:mx-0">
       <h2 class="mt-2 text-4xl font-bold tracking-tight sm:text-6xl">
         My Favorite Skills
       </h2>
@@ -23,7 +23,7 @@
   </div>
 
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
-    <div class="mx-auto max-w-2xl lg:mx-0">
+    <div class="max-w-2xl lg:mx-0">
       <h2 class="mt-2 text-4xl font-bold tracking-tight sm:text-6xl">
         About Me
       </h2>
