--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,8 @@
     <title>{{template "title" .}}</title>
   </head>
 
-  <body class="bg-neutral-900 text-neutral-300">
-    <div class="h-full mx-auto max-w-7xl sm:px-6 lg:px-8">
+  <body class="bg-neutral-900 text-neutral-300 ">
+    <div class="min-h-screen mx-auto max-w-7xl sm:px-6 lg:px-8 flex flex-col">
       <!-- header -->
       <div
         class="px-6 lg:px-8 flex flex-row pt-4 justify-between text-neutral-600"
@@ -33,9 +33,9 @@
       {{template "content" .}}
       <!-- footer -->
       <footer
-        class="pt-24 pb-2 flex h-max justify-center items-end text-neutral-600"
+        class="mt-auto flex justify-center items-end text-neutral-600"
       >
-        <div class="flex justify-center w-full space-x-4">
+        <div class="mb-2 flex justify-center w-full space-x-4">
           <a
             href="https://github.com/crims1n"
             target="_blank"
