--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -7,7 +7,8 @@
       </h2>
       <p class="mt-6 text-lg leading-8">
         I'm Drew. I'm a 25-year-old software developer residing somewhere in the
-        Washington DC metropolitan area.</p>
+        Washington DC metropolitan area.
+      </p>
     </div>
   </div>
 
@@ -28,7 +29,9 @@
         About Me
       </h2>
       <p class="mt-6 text-lg leading-8">
-        I love writing code, using Linux, and learning new things. If you want to know more, feel free to reach out!
+        I love writing code, using Linux, and learning new things. While I
+        consider myself more of a backend engineer, I am thoroughly acquainted
+        with the entire stack. Check out my stuff and feel free to reach out!
       </p>
     </div>
   </div>
