fix: add seo and aria-labels

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,11 @@
 {{define "base"}}
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta
+      name="description"
+      content="Personal web site for Drew Boram, a software developer"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script
@@ -48,6 +52,7 @@
       <footer class="mt-auto flex justify-center items-end text-neutral-600">
         <div class="mb-4 flex justify-center w-full space-x-4">
           <a
+            aria-label="Github"
             href="https://github.com/crims1n"
             target="_blank"
             class="text-neutral-600"
@@ -66,6 +71,7 @@
             </svg>
           </a>
           <a
+            aria-label="Linkedin"
             href="https://www.linkedin.com/in/drew-boram-a942ba180/"
             target="_blank"
             class="text-neutral-600"
@@ -84,6 +90,7 @@
             </svg>
           </a>
           <a
+            aria-label="Twitter"
             href="https://twitter.com/banana_slug_dev"
             target="_blank"
             class="text-neutral-600"
