feat: update bio

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -6,8 +6,8 @@
         {{.Greeting}}!
       </h2>
       <p class="mt-6 text-lg leading-8">
-        I'm Drew. I'm a 25-year-old software developer residing somewhere in the
-        Washington DC metropolitan area.
+        I'm Drew. I'm a 25-year-old software developer who loves working on
+        cloud-native software.
       </p>
     </div>
   </div>
@@ -18,7 +18,7 @@
         My Favorite Skills
       </h2>
       <p class="mt-6 text-lg leading-8">
-        Go, Typescript, Python, React, Git, Docker, SQL
+        Go, TypeScript, Python, React, Git, Docker, SQL
       </p>
     </div>
   </div>
