feat: add dynamic age

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -6,7 +6,7 @@
         {{.Greeting}}!
       </h2>
       <p class="mt-6 text-lg leading-8">
-        I'm Drew. I'm a 25-year-old software developer who loves working on
+        I'm Drew. I'm a {{.Age}}-year-old software developer who loves working on
         cloud-native software.
       </p>
     </div>
