feat: update templates

--- a/templates/pages/projects.html
+++ b/templates/pages/projects.html
@@ -6,45 +6,39 @@
       <div class="w-full border-t border-neutral-600"></div>
     </div>
     <div class="relative flex justify-start">
-      <span class="bg-neutral-900 pr-3 text-base leading-6 text-neutral-600"
-        >Personal</span
-      >
+      <span class="bg-neutral-900 pr-3 text-base leading-6 text-neutral-600">Personal</span>
     </div>
   </div>
-  <div class="lg:mx-0">
+  <div class="lg:mx-0 my-4">
     <h2 class="font-bold tracking-tight">Website (drewboram.com)</h2>
     <p class="text-neutral-400 italic">
       You are here! Made with Go, Tailwind, and HTMX.
     </p>
   </div>
+  <div class="lg:mx-0 my-4">
+    <a class="font-bold tracking-tight hover:underline" href="https://github.com/banana-slugg/garbanzo"
+      target="_blank">Garbanzo</a>
+    <p class="text-neutral-400 italic">
+      A Discord clone I'm working on in my free time.
+    </p>
+  </div>
   <!-- divider -->
-  <div class="relative my-4">
+  <div class="relative">
     <div class="absolute inset-0 flex items-center" aria-hidden="true">
       <div class="w-full border-t border-neutral-600"></div>
     </div>
     <div class="relative flex justify-start">
-      <span class="bg-neutral-900 pr-3 text-base leading-6 text-neutral-600"
-        >Academic</span
-      >
+      <span class="bg-neutral-900 pr-3 text-base leading-6 text-neutral-600">Academic</span>
     </div>
   </div>
   <!-- divider -->
-  <div class="lg:mx-0">
-    <a
-      class="font-bold tracking-tight hover:underline"
-      href="https://github.com/banana-slugg/mtg-senior-research"
-      target="_blank"
-      >Senior Research Project</a
-    >
+  <div class="lg:mx-0 my-4">
+    <a class="font-bold tracking-tight hover:underline" href="https://github.com/banana-slugg/mtg-senior-research"
+      target="_blank">Senior Research Project</a>
     <p class="text-neutral-400 italic">
       My capstone project for my Computer Science degree. Made with Python,
       Tensorflow,
-      <a
-        class="underline"
-        href="https://github.com/banana-slugg/color-picker"
-        target="_blank"
-        >and a bit of Go</a
-      >.
+      <a class="underline" href="https://github.com/banana-slugg/color-picker" target="_blank">and a bit of Go</a>.
     </p>
   </div>
 </div>
