chore: username change

--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
         <div class="mb-4 flex justify-center w-full space-x-4">
           <a
             aria-label="Github"
-            href="https://github.com/banana-slugg"
+            href="https://github.com/pilegoblin"
             target="_blank"
             class="text-neutral-600"
           >
