--- a/templates/pages/projects.html
+++ b/templates/pages/projects.html
@@ -16,7 +16,7 @@
     </p>
   </div>
   <div class="lg:mx-0 my-4">
-    <a class="font-bold tracking-tight hover:underline" href="https://github.com/banana-slugg/garbanzo"
+    <a class="font-bold tracking-tight hover:underline" href="https://github.com/pilegoblin/garbanzo"
       target="_blank">Garbanzo</a>
     <p class="text-neutral-400 italic">
       A Discord clone I'm working on in my free time.
@@ -33,12 +33,12 @@
   </div>
   <!-- divider -->
   <div class="lg:mx-0 my-4">
-    <a class="font-bold tracking-tight hover:underline" href="https://github.com/banana-slugg/mtg-senior-research"
+    <a class="font-bold tracking-tight hover:underline" href="https://github.com/pilegoblin/mtg-senior-research"
       target="_blank">Senior Research Project</a>
     <p class="text-neutral-400 italic">
       My capstone project for my Computer Science degree. Made with Python,
       Tensorflow,
-      <a class="underline" href="https://github.com/banana-slugg/color-picker" target="_blank">and a bit of Go</a>.
+      <a class="underline" href="https://github.com/pilegoblin/color-picker" target="_blank">and a bit of Go</a>.
     </p>
   </div>
 </div>
